***********************************************************
**********| Version 2.5.1 - Released 2015-01-30 |**********
***********************************************************

* permits shipping without invoicing
* customer block only on PR

***********************************************************
**********| Version 2.5.0 - Released 2014-12-08 |**********
***********************************************************

* fixed installment without PAYMENT CONFIRM
* no full-return anymore
* no negative basket amount anymore
* ZGB-DSE link by default
* full integration of AT support
* address normalization

***********************************************************
**********| Version 2.4.5 - Released 2014-10-28 |**********
***********************************************************

* cURL SSLVERSION to 1 (TLS1.x)

***********************************************************
**********| Version 2.4.4 - Released 2014-10-22 |**********
***********************************************************

* changed RatePAY gateway URL
* switch to interest rate in Ratenrechner

***********************************************************
**********| Version 2.4.3 - Released 2014-09-05 |**********
***********************************************************

* fixed payment method overlay
* changed PC - prevention of multiple PC
* removed pdf and email generation

***********************************************************
**********| Version 2.4.2 - Released 2014-07-09 |**********
***********************************************************

* dob bugfix and refactoring the method of input
* added validation of vat id and phone number
* added merchant cunsumer id
* changes in language files
* fixed PQ Payment Init bug
* disabled DOB in case of B2B
* fixed VatId bug and added changeable VatId form

***********************************************************
**********| Version 2.4.1 - Released 2014-06-04 |**********
***********************************************************
