@@ -1,13 +1,13 @@
 RatePAY GmbH - Magento Payment Module
 ============================================
 
-|Module | RatePAY Magento Module for Magento
+|Module | RatePAY Module for Magento
 |------|----------
 |Author | `Aarne Welschlau`
 |Prefix | `pi`
 |Shop Version | `CE` `<= 1.9.x`
-|Version | `2.5.1`
+|Version | `2.5.2`
 |Link | `http://www.ratepay.com`
 |Mail | `integration@ratepay.com`
-|Description | `permits shipping without invoicing. customer block only on PR`
+|Description | `enhanced DISCOUNT number and directdebit tpl bugfix`
 |Installation | `see separate installation manual`
