@@ -24,7 +24,7 @@
 
     <modules>
         <PayIntelligent_Ratepay>
-            <version>2.5.1</version>
+            <version>2.5.2</version>
         </PayIntelligent_Ratepay>
     </modules>
 
