@@ -126,15 +126,6 @@ $bankData = $this->getBankData();
         </li>
     <?php endif; ?>
 
-    <?php if (!$this->isPhoneSet()): ?>
-        <li>
-            <label for="<?php echo $_code ?>_phone" class="required"><em>*</em><?php echo $this->__('Pi Phone'); ?></label>
-            <div class="input-box">
-                <input value="" type="text" name="payment[<?php echo $_code ?>_phone]" id="<?php echo $_code ?>_phone" name="payment[<?php echo $_code ?>_phone]" class="input-text required-entry ratepayphone"/>
-            </div>
-        </li>
-    <?php endif; ?>
-
     <br/>
 
     <ul style="border: 1px solid #BDBDBD; padding-left: 4px;">
